# C-SDL2-Hello-World

./: .gitignore  CMakeLists.txt  scripts.txt
src/: common.c  common.h  constants.c  constants.h  game.c  game.h  init_sdl.c  init_sdl.h  keystroke.c  keystroke.h  levels.c  levels.h  main.c
